--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -27,7 +27,7 @@
     <g
       id="topBarGroup">
       <rect
-         style="fill:pink;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;display:inline"
+         style="{{> pink}}fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;display:inline"
          id="topBar"
          width="1020"
          height="50"
