Removed all tspans

--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -59,19 +59,13 @@
        style="font-size:16px;{{> sansserif}}"
        x="40.333382"
        y="167.33665"
-       id="text3245"><tspan
-         x="40.333382"
-         y="167.33665"
-         id="tspan3249">Possible Colors</tspan></text>
+       id="text3245">Possible Colors</text>
     <text
        xml:space="preserve"
        style="font-size:17.26740646px;{{> sansserif}}"
        x="339.4985"
        y="72.728561"
-       id="text3253"><tspan
-         x="339.4985"
-         y="72.728561"
-         id="tspan3257">Style Tile</tspan></text>
+       id="text3253">Style Tile</text>
     <text
        xml:space="preserve"
        style="font-size:17.81324577px;{{> serif}}"
@@ -80,50 +74,28 @@
        id="text3261">version: 1</text>
     <text
        xml:space="preserve"
-       style="font-size:40px;{{> sansserif}}"
+       style="font-size:11px;{{> sansserif}}"
        x="520"
        y="230"
-       id="text3284"><tspan
-         id="tspan3286"
-         x="520"
-         y="230"
-         style="font-size:11px;line-height:125%">Font: Name #hexcode</tspan></text>
+       id="text3284">Font: Name #hexcode</text>
     <text
        xml:space="preserve"
-       style="font-size:40px;{{> sansserif}}"
-       x="563"
-       y="148"
-       id="text3288"><tspan
-         id="tspan3290"></tspan></text>
-    <text
-       xml:space="preserve"
-       style="font-size:40px;{{> sansserif}}"
+       style="font-size:11px;{{> sansserif}}"
        x="520"
        y="294"
-       id="text3284-0"><tspan
-         id="tspan3286-4"
-         x="520"
-         y="294"
-         style="font-size:11px;line-height:125%">Font: Name #hexcode</tspan></text>
+       id="text3284-0">Font: Name #hexcode</text>
     <text
        xml:space="preserve"
-       style="font-size:40px;{{> sansserif}}"
+       style="font-size:11px;{{> sansserif}}"
        x="520"
        y="470"
-       id="text3284-7"><tspan
-         id="tspan3286-6"
-         x="520"
-         y="470"
-         style="font-size:11px;line-height:125%">Font: Name #hexcode</tspan></text>
+       id="text3284-7">Font: Name #hexcode</text>
     <text
        xml:space="preserve"
        style="font-size:21.57426453px;{{> sansserif}}"
        x="519.94604"
        y="275.40125"
-       id="text3322"><tspan
-         id="tspan3324"
-         x="519.94604"
-         y="275.40125">This is an Example of a Sub Head</tspan></text>
+       id="text3322">This is an Example of a Sub Head</text>
     <switch>
     <foreignObject
       x="520"
@@ -157,85 +129,52 @@
     </switch>
     <text
        xml:space="preserve"
-       style="font-size:10.57773209px;{{> sansserif}}"
+       style="font-size:11px;{{> sansserif}}"
        x="521.91382"
        y="497.64597"
-       id="text3420"><tspan
-         id="tspan3422"
-         x="521.91382"
-         y="497.64597">This is an example of a Text Link »</tspan></text>
+       id="text3420">This is an example of a Text Link »</text>
     <text
        xml:space="preserve"
-       style="font-size:15.20080757px;{{> sansserif}}"
+       style="font-size:15px;{{> sansserif}}"
        x="522.19373"
        y="549.15845"
-       id="text3424"><tspan
-         id="tspan3426"
-         x="522.19373"
-         y="549.15845">Adjectives</tspan></text>
+       id="text3424">Adjectives</text>
     <text
        xml:space="preserve"
-       style="font-size:32.19615555px;{{> sansserif}}"
-       x="519.76593"
-       y="597.31097"
-       id="text3428"><tspan
-         id="tspan3430"
-         x="519.76593"
-         y="597.31097">Lorem</tspan></text>
-    <text
-       xml:space="preserve"
-       style="font-size:32.19615555px;{{> sansserif}}"
-       x="664"
-       y="598"
-       id="text3428-1"><tspan
-         id="tspan3430-5"
-         x="664"
-         y="598">Ipsum</tspan></text>
-    <text
-       xml:space="preserve"
-       style="font-size:32.19615555px;{{> sansserif}}"
-       x="817.76593"
-       y="597.31097"
-       id="text3428-0"><tspan
-         id="tspan3430-0"
-         x="817.76593"
-         y="597.31097">Dolor</tspan></text>
-    <text
-       xml:space="preserve"
-       style="font-size:32.19615555px;{{> sansserif}}"
+       style="font-size:32px;{{> sansserif}}"
        x="520"
-       y="646"
-       id="text3428-6"><tspan
-         id="tspan3430-3"
-         x="520"
-         y="646">Sit</tspan></text>
+       y="600">Lorem</text>
     <text
        xml:space="preserve"
-       style="font-size:32.19615555px;{{> sansserif}}"
-       x="664"
-       y="648"
-       id="text3428-8"><tspan
-         id="tspan3430-54"
-         x="664"
-         y="648">Amet</tspan></text>
+       style="font-size:32px;{{> sansserif}}"
+       x="660"
+       y="600">Ipsum</text>
     <text
        xml:space="preserve"
-       style="font-size:32.19615555px;{{> sansserif}}"
-       x="818"
-       y="648"
-       id="text3428-2"><tspan
-         id="tspan3430-2"
-         x="818"
-         y="648">Magna</tspan></text>
+       style="font-size:32px;{{> sansserif}}"
+       x="820"
+       y="600">Dolor</text>
+    <text
+       xml:space="preserve"
+       style="font-size:32px;{{> sansserif}}"
+       x="520"
+       y="650">Sit</text>
+    <text
+       xml:space="preserve"
+       style="font-size:32px;{{> sansserif}}"
+       x="660"
+       y="650">Amet</text>
+    <text
+       xml:space="preserve"
+       style="font-size:32px;{{> sansserif}}"
+       x="820"
+       y="650">Magna</text>
     <text
        xml:space="preserve"
        style="font-size:16.22511101px;{{> sansserif}}"
        x="42"
        y="320"
-       id="text3245-0"><tspan
-         x="42"
-         y="320"
-         id="tspan3249-0">Textures</tspan></text>
+       id="text3245-0">Textures</text>
     <rect
        style="fill:none;stroke:#000000;stroke-width:1"
        id="rect3556"
@@ -371,24 +310,16 @@
        y="526" />
     <text
        xml:space="preserve"
-       style="font-size:11.274333px;{{> sansserif}}"
+       style="font-size:11.274333px;fill:#ffffff;{{> sansserif}}"
        x="59.915886"
        y="551.97485"
-       id="text3666"><tspan
-         id="tspan3668"
-         x="59.915886"
-         y="551.97485"
-         style="fill:#ffffff">This is an example of a Button</tspan></text>
+       id="text3666">This is an example of a Button</text>
     <text
        xml:space="preserve"
-       style="font-size:11.274333px;{{> sansserif}}"
+       style="font-size:11.274333px;fill:#ffffff;{{> sansserif}}"
        x="298"
        y="552"
-       id="text3666-3"><tspan
-         id="tspan3668-1"
-         x="298"
-         y="552"
-         style="fill:#ffffff">Submit Button Example Here</tspan></text>
+       id="text3666-3">Submit Button Example Here</text>
     <text
        xml:space="preserve"
        style="font-size:15px;fill:#808080;{{> serif}}"
@@ -418,18 +349,6 @@
        style="font-size:30px;{{> sansserif}}"
        x="522"
        y="212"
-       id="text3741"><tspan
-         id="tspan3743"
-         x="522"
-         y="212">This is an Example of a Header</tspan></text>
-    <text
-       xml:space="preserve"
-       style="font-size:40px;{{> sansserif}}"
-       x="657"
-       y="137"
-       id="text3745"><tspan
-         id="tspan3747"
-         x="657"
-         y="137" /></text>
+       id="text3741">This is an Example of a Header</text>
   </g>
 </svg>
