Moved adjectives into group

--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -133,42 +133,48 @@
        x="521.91382"
        y="497.64597"
        id="text3420">This is an example of a Text Link »</text>
-    <text
-       xml:space="preserve"
-       style="font-size:15px;{{> sansserif}}"
-       x="522.19373"
-       y="549.15845"
-       id="text3424">Adjectives</text>
-    <text
-       xml:space="preserve"
-       style="font-size:32px;{{> sansserif}}"
-       x="520"
-       y="600">Lorem</text>
-    <text
-       xml:space="preserve"
-       style="font-size:32px;{{> sansserif}}"
-       x="660"
-       y="600">Ipsum</text>
-    <text
-       xml:space="preserve"
-       style="font-size:32px;{{> sansserif}}"
-       x="820"
-       y="600">Dolor</text>
-    <text
-       xml:space="preserve"
-       style="font-size:32px;{{> sansserif}}"
-       x="520"
-       y="650">Sit</text>
-    <text
-       xml:space="preserve"
-       style="font-size:32px;{{> sansserif}}"
-       x="660"
-       y="650">Amet</text>
-    <text
-       xml:space="preserve"
-       style="font-size:32px;{{> sansserif}}"
-       x="820"
-       y="650">Magna</text>
+    <g
+      id="adjectiveGroup">
+      <text
+         xml:space="preserve"
+         style="font-size:15px;{{> sansserif}}"
+         x="522.19373"
+         y="549.15845"
+         id="ajectiveHeader">Adjectives</text>
+      <g
+        id="adjectives">
+        <text
+           xml:space="preserve"
+           style="font-size:32px;{{> sansserif}}"
+           x="520"
+           y="600">Lorem</text>
+        <text
+           xml:space="preserve"
+           style="font-size:32px;{{> sansserif}}"
+           x="660"
+           y="600">Ipsum</text>
+        <text
+           xml:space="preserve"
+           style="font-size:32px;{{> sansserif}}"
+           x="820"
+           y="600">Dolor</text>
+        <text
+           xml:space="preserve"
+           style="font-size:32px;{{> sansserif}}"
+           x="520"
+           y="650">Sit</text>
+        <text
+           xml:space="preserve"
+           style="font-size:32px;{{> sansserif}}"
+           x="660"
+           y="650">Amet</text>
+        <text
+           xml:space="preserve"
+           style="font-size:32px;{{> sansserif}}"
+           x="820"
+           y="650">Magna</text>
+      </g>
+    </g>
     <text
        xml:space="preserve"
        style="font-size:16.22511101px;{{> sansserif}}"
@@ -310,13 +316,13 @@
        y="526" />
     <text
        xml:space="preserve"
-       style="font-size:11.274333px;fill:#ffffff;{{> sansserif}}"
+       style="font-size:11px;fill:#ffffff;{{> sansserif}}"
        x="59.915886"
        y="551.97485"
        id="text3666">This is an example of a Button</text>
     <text
        xml:space="preserve"
-       style="font-size:11.274333px;fill:#ffffff;{{> sansserif}}"
+       style="font-size:11px;fill:#ffffff;{{> sansserif}}"
        x="298"
        y="552"
        id="text3666-3">Submit Button Example Here</text>
