Removed all decimals

--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -5,8 +5,6 @@
   @author Todd Wolfson <todd@twolfson.com>
 -->
 
-<!-- TODO: Replace add fall backs for serif font (Bitstream Charter is definitely not cross platform) -->
-
 <svg
    xmlns:svg="http://www.w3.org/2000/svg"
    xmlns="http://www.w3.org/2000/svg"
@@ -56,73 +54,60 @@
        id="logo">Logo Here</text>
     <text
        xml:space="preserve"
-       style="font-size:16px;{{> sansserif}}"
-       x="40.333382"
-       y="167.33665"
-       id="text3245">Possible Colors</text>
+       style="font-size:18px;{{> sansserif}}"
+       x="40"
+       y="170">Possible Colors</text>
     <text
        xml:space="preserve"
-       style="font-size:17.26740646px;{{> sansserif}}"
-       x="339.4985"
-       y="72.728561"
-       id="text3253">Style Tile</text>
+       style="font-size:18px;{{> sansserif}}"
+       x="340"
+       y="75">Style Tile</text>
     <text
        xml:space="preserve"
-       style="font-size:17.81324577px;{{> serif}}"
-       x="339.97757"
-       y="94.025253"
-       id="text3261">version: 1</text>
+       style="font-size:18px;{{> serif}}"
+       x="340"
+       y="100">version: 1</text>
     <text
        xml:space="preserve"
        style="font-size:11px;{{> sansserif}}"
        x="520"
-       y="230"
-       id="text3284">Font: Name #hexcode</text>
+       y="230">Font: Name #hexcode</text>
     <text
        xml:space="preserve"
        style="font-size:11px;{{> sansserif}}"
        x="520"
-       y="294"
-       id="text3284-0">Font: Name #hexcode</text>
+       y="470">Font: Name #hexcode</text>
+    <text
+       xml:space="preserve"
+       style="font-size:22px;{{> sansserif}}"
+       x="520"
+       y="275">This is an Example of a Sub Head</text>
     <text
        xml:space="preserve"
        style="font-size:11px;{{> sansserif}}"
        x="520"
-       y="470"
-       id="text3284-7">Font: Name #hexcode</text>
-    <text
-       xml:space="preserve"
-       style="font-size:21.57426453px;{{> sansserif}}"
-       x="519.94604"
-       y="275.40125"
-       id="text3322">This is an Example of a Sub Head</text>
+       y="300">Font: Name #hexcode</text>
     <switch>
     <foreignObject
       x="520"
-      y="310"
+      y="320"
       width="500"
       height="400">
     <p xmlns="http://www.w3.org/1999/xhtml" style="font-size:11px;{{> sansserif}}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  minim veniam, quis nostrud exercitation ulliam corper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel feugait nulla facilisi.</p>
     </foreignObject>
     <flowRoot
        xml:space="preserve"
-       style="font-size:11px;{{> sansserif}}"
-       id="flowRoot3404"
-       transform="translate(2,-8)">
+       style="font-size:11px;{{> sansserif}}">
        <flowRegion
-         id="flowRegion3406"
          style="fill:#000000">
          <use
            x="0"
            y="0"
-           xlink:href="#rect3402"
-           id="use3408"
            style="fill:#000000"
            width="1020"
            height="760" />
       </flowRegion>
       <flowPara
-         id="flowPara3410"
          style="font-size:11px;line-height:200%;fill:#000000">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  minim veniam, quis nostrud exercitation ulliam corper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel feugait nulla facilisi.</flowPara>
     </flowRoot>
     <text x="520" y="310">Your viewer does not support HTML or SVG flow</text>
@@ -130,16 +115,15 @@
     <text
        xml:space="preserve"
        style="font-size:11px;{{> sansserif}}"
-       x="521.91382"
-       y="497.64597"
-       id="text3420">This is an example of a Text Link »</text>
+       x="520"
+       y="500">This is an example of a Text Link »</text>
     <g
       id="adjectiveGroup">
       <text
          xml:space="preserve"
          style="font-size:15px;{{> sansserif}}"
-         x="522.19373"
-         y="549.15845"
+         x="520"
+         y="550"
          id="ajectiveHeader">Adjectives</text>
       <g
         id="adjectives">
@@ -245,7 +229,7 @@
       id="textureGroup">
       <text
          xml:space="preserve"
-         style="font-size:16.22511101px;{{> sansserif}}"
+         style="font-size:16px;{{> sansserif}}"
          x="42"
          y="320"
          id="textureHeader">Textures</text>
@@ -307,7 +291,6 @@
       <g>
         <rect
            style="{{> blackRect}}"
-           id="rect3646-9"
            width="220"
            height="45"
            x="280"
@@ -330,7 +313,7 @@
          xml:space="preserve"
          style="font-size:15px;fill:#808080;{{> serif}}"
          x="40"
-         y="730">Template by @Semanthatoy</text>
+         y="730">Template by @Samanthatoy</text>
       <text
          xml:space="preserve"
          style="font-size:15px;fill:#808080;{{> serif}}"
@@ -341,8 +324,7 @@
        xml:space="preserve"
        style="font-size:17px;fill:#b3b3b3;{{> sansserif}}"
        x="520"
-       y="730"
-       id="text3716">Be creative, don't just use this template as-is!</text>
+       y="730">Be creative, don't just use this template as-is!</text>
     <text
        xml:space="preserve"
        style="font-size:30px;{{> sansserif}}"
