Removed any non-penta numbers

--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -36,8 +36,7 @@
          style="font-size:24px;fill:#ffffff;{{> sansserif}}"
          id="projectName"
          x="340"
-         y="33"
-         >Project Name</text>
+         y="35">Project Name</text>
     </g>
     <rect
        style="fill:#ffffff;stroke:#4d4d4d"
@@ -230,7 +229,7 @@
       <text
          xml:space="preserve"
          style="font-size:16px;{{> sansserif}}"
-         x="42"
+         x="40"
          y="320"
          id="textureHeader">Textures</text>
       <g
@@ -279,7 +278,7 @@
         <rect
            style="{{> blackRect}}"
            width="220"
-           height="44"
+           height="45"
            x="40"
            y="525" />
         <text
