Added colors to hexcodes

--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -68,12 +68,12 @@
        y="100">version: 1</text>
     <text
        xml:space="preserve"
-       style="font-size:11px;{{> sansserif}}"
+       style="font-size:11px;fill:#666666;{{> sansserif}}"
        x="520"
        y="230">Font: Name #hexcode</text>
     <text
        xml:space="preserve"
-       style="font-size:11px;{{> sansserif}}"
+       style="font-size:11px;fill:#666666;{{> sansserif}}"
        x="520"
        y="470">Font: Name #hexcode</text>
     <text
@@ -83,7 +83,7 @@
        y="275">This is an Example of a Sub Head</text>
     <text
        xml:space="preserve"
-       style="font-size:11px;{{> sansserif}}"
+       style="font-size:11px;fill:#666666;{{> sansserif}}"
        x="520"
        y="300">Font: Name #hexcode</text>
     <switch>
