--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -14,12 +14,14 @@
    version="1.1">
 
    <defs>
-    <radialGradient id="myRadialGradient4"
-       fx="5%" fy="5%" r="65%"
+    <linearGradient
+       id="bwVertGradient"
+       x1="0%" y1="0%"
+       x2="100%" y2="0%"
        spreadMethod="pad">
-      <stop offset="0%"   stop-color="#00ee00" stop-opacity="1"/>
-      <stop offset="100%" stop-color="#006600" stop-opacity="1" />
-    </radialGradient>
+      <stop offset="0%"   stop-color="#333333" stop-opacity="1"/>
+      <stop offset="100%" stop-color="#000000" stop-opacity="1" />
+    </linearGradient>
   </defs>
 
   <g
@@ -32,13 +34,20 @@
        y="0"
        id="wrapperBorder" />
     <g
-      id="topBarGroup">T
+      id="topBarGroup">
       <rect
-         style="fill:url(#myRadialGradient4);"
+         style="{{> blackRect}}"
          id="topBar"
          width="1020"
          height="50"
          x="0"
+         y="0" />
+      <rect
+         style="fill:url(#bwVertGradient);"
+         id="topGradient"
+         width="710"
+         height="50"
+         x="310"
          y="0" />
       <text
          xml:space="preserve"
