--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -68,7 +68,7 @@
    <g
      id="svgWrapper">
     <rect
-       style="{{> blackStroke}}"
+       style="fill:#FFFFFF;stroke:#000000;"
        width="1020"
        height="760"
        x="0"
