--- a/template.svg.mustache
+++ b/template.svg.mustache
@@ -328,19 +328,16 @@
       </foreignObject>
       <flowRoot
          xml:space="preserve"
-         style="font-size:11px;{{> sansserif}}">
-         <flowRegion
-           style="fill:#000000">
-           <use
-             x="0"
-             y="0"
-             style="fill:#000000"
-             width="1020"
-             height="760" />
-        </flowRegion>
-        <flowPara
-           style="font-size:11px;line-height:200%;fill:#000000">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  minim veniam, quis nostrud exercitation ulliam corper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel feugait nulla facilisi.</flowPara>
-      </flowRoot>
+         style="font-size:11px;line-height:200%;{{> sansserif}}"
+         ><flowRegion
+            ><rect
+            x="520"
+            y="320"
+            width="500"
+            height="400" />
+        </flowRegion
+        ><flowPara>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad  minim veniam, quis nostrud exercitation ulliam corper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel feugait nulla facilisi.</flowPara
+      ></flowRoot>
       <text x="520" y="310">Your viewer does not support HTML or SVG flow</text>
       </switch>
       <text
